# chem-eng-real-time-process-control-simulator

./: .gitignore  .~lock.demo_decay_sine_2nd_ord_transfer_fn_stable_underdamped.csv#  Cargo.toml  README.md  demo_2nd_ord_transfer_fn_stable_underdamped.csv  demo_no_zeroes_2nd_ord_transfer_fn_stable_underdamped.csv  one_zero_two_complex_poles_demo_2nd_ord_transfer_fn_stable_underdamped.csv
src/: main.rs
src/examples/: analog_pid_demos.rs  feedback_control_examples.rs  first_order_demos.rs  generic_transfer_fn_demos.rs  mod.rs  pid_demos.rs  second_order_demos.rs
src/lib/: lib.rs
src/lib/alpha_nightly/: mod.rs  prelude.rs
src/lib/alpha_nightly/controllers/: mod.rs
src/lib/alpha_nightly/controllers/filtered_derivative_controller/: mod.rs
src/lib/alpha_nightly/controllers/integral_controller/: mod.rs
src/lib/alpha_nightly/errors/: mod.rs
src/lib/alpha_nightly/stable_transfer_functions/: decaying_exponentials.rs  decaying_sinusoid.rs  first_order_transfer_fn.rs  first_order_transfer_fn_with_zeroes.rs  mod.rs  second_order_transfer_fn.rs  step_fn.rs
src/lib/alpha_nightly/transfer_fn_wrapper_and_enums/: generic_first_order.rs  generic_second_order.rs  mod.rs
src/lib/beta_testing/: mod.rs  prelude.rs
src/lib/beta_testing/errors/: mod.rs
src/lib/beta_testing/stable_transfer_functions/: decaying_exponent.rs  decaying_sinusoid.rs  first_order_transfer_fn.rs  first_order_transfer_fn_with_zeroes.rs  mod.rs  second_order_transfer_fn.rs  step_fn.rs
src/lib/beta_testing/transfer_fn_wrapper_and_enums/: generic_first_order.rs  generic_second_order.rs  mod.rs
(+1 files in other folders)
